--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-<!--Your HTML code here-->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Top 3 American states COVID 19 Cases|County-Wise </title>
+	<body style="background-color:whitesmoke;"> </body>
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+</head>
+<body>
+    <!-- HEADER -->
+    <header id="main-header">
+        <div class="container">
+            <div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <h1><span class="primary-text">Covid 19 cases by counties in top 3 American states</span> </h1>
+                </div> 
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
+                    <nav id="navbar">
+                        <ul>
+                            <li class="current"><a href="index.html">Home</a></li>
+							<li><a href="About Us.html">About</a></li>
+							<li><a href="Contact.Html">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+	</header>
+	<title>Top 3 American states COVID 19 Cases|County-Wise</title>
+	
+    <body>
+    <!-- SUBHEADER -->
+    <section id="subheader">
+        <div class="container">
+            <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
+			
+                <div  class="col-xs-10 col-sm-10 col-md-10 col-lg-7 showcase-content">
+                    <p>Welcome to the Covid 19 tracking for the top 3 affected states in the United States with their Counties.</p>
+                </div>
+				
+            </div>
+			 <div class="row center-xs center-sm center-md center-lg">
+				<div  class="col-xs-12 col-sm-4 col-md-4 col-lg-4 ">	
+					<h4>Explore Covid cases in California counties</h4>
+					<a href="California.html"><img src="img/California.jpg" alt="California" height="200" width="350" /></br></a>
+					<a href="California.html">Covid cases in California Counties</a>
+
+				</div>
+				<div  class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<h4>Explore Covid cases in Texas counties</h4>	
+					<a href="Texas.html"><img src="img/Texas.jpg" alt="Texas" height="200" width="350" /></br></a>
+					<a href="Texas.html"> Covid cases in Texas Counties</a>
+
+				</div>			
+				<div  class="col-xs-12 col-sm-3 col-md-3 col-lg-3"> 
+					<h4>Explore Covid cases in New York counties</h4>
+					<a href="NewYork.html"><img src="img/NewYork.jpg" alt="NewYork" height="200" width="350" /></br></a>
+					<a href="NewYork.html">Covid cases in NewYork Counties</a>
+
+				</div>					
+			</div>								
+        </div>
+	</section>
+    <footer>
+         <p> All rights reserved © Team 4</p>
+    </footer>
+   
+</body>
+</html>
+
+
