--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Top 3 American states COVID 19 Cases|County-Wise </title>
+	<title>Covid 19 info for Top 3 states in US by counties</title>
 	<body style="background-color:whitesmoke;"> </body>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
@@ -13,21 +13,23 @@
         <div class="container">
             <div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                    <h1><span class="primary-text">Covid 19 cases by counties in top 3 American states</span> </h1>
+					<h3 style="font-size:24px"><span class = "primary-text">Covid 19 info for Top 3 states in US by counties</span></h3>
+					
                 </div> 
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
                     <nav id="navbar">
                         <ul>
                             <li class="current"><a href="index.html">Home</a></li>
+							<li><a href="Chart.html">Chart</a></li>
 							<li><a href="About Us.html">About</a></li>
-							<li><a href="Contact.Html">Contact</a></li>
+							<li><a href="Contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </div>
 	</header>
-	<title>Top 3 American states COVID 19 Cases|County-Wise</title>
+	<title>Covid 19 info for Top 3 states in US by counties</title>
 	
     <body>
     <!-- SUBHEADER -->
@@ -62,8 +64,19 @@
 			</div>								
         </div>
 	</section>
+	 <section id="subheader">
+        <div class="container">
+		 <div class="row center-xs center-sm center-md center-lg middle-xs middle-sm middle-md middle-lg">
+			
+                <div  class="col-xs-10 col-sm-10 col-md-10 col-lg-7 showcase-content">
+                    <p>For more information about all the states in United States America Covid 19 info by counties navigate to</p>
+					<a href="https://www.worldometers.info/coronavirus/country/us/" target="_blank">USA Countries Covid-19 info</a>
+                </div>
+				</div>
+	</section>
+	</div>
     <footer>
-         <p> All rights reserved © Team 4</p>
+         <p> All rights reserved © Group 1</p>
     </footer>
    
 </body>
