--- a/Chart.html
+++ b/Chart.html
@@ -18,10 +18,10 @@
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
                     <nav id="navbar">
                         <ul>
-                            <li class="current"><a href="index.html">Home</a></li>
-							<li><a href="Chart.html">Chart</a></li>
+                            <li><a href="index.html">Home</a></li>
+							<li class="current"><a href="Chart.html">Chart</a></li>
 							<li><a href="About Us.html">About</a></li>
-							<li><a href="Contact.Html">Contact</a></li>
+							<li><a href="Contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -75,7 +75,7 @@
 	</section>
 	</div>
     <footer>
-         <p> All rights reserved © Team 9</p>
+         <p> All rights reserved © Group 1</p>
     </footer>
    
 </body>
