--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>Top 3 American states COVID 19 Cases|County-Wise </title>
+	<title>Covid 19 info for Top 3 states in US by counties</title>
 	<body style="background-color:whitesmoke;"> </body>
     <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
@@ -13,26 +13,29 @@
         <div class="container">
             <div class="row end-sm end-md end-lg center-xs middle-xs middle-sm middle-md middle-lg">
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                    <h1><span class="primary-text">Covid 19 cases by counties in top 3 American states</span> </h1>
+					<h3 style="font-size:24px"><span class = "primary-text">Covid 19 info for Top 3 states in US by counties</span></h3>
                 </div> 
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
                     <nav id="navbar">
                         <ul>
-                            <li><a href="Home.Html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
+							<li><a href="Chart.html">Chart</a></li>
 							<li><a href="About Us.html">About</a></li>
-							<li><a href="Contact.Html">Contact</a></li>
+							<li class="current"><a href="Contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </div>
 	</header>
-	<title>Top 3 American states COVID 19 Cases|County-Wise</title>
+	<title>Covid 19 info for Top 3 states in US by counties</title>
 	
     <body>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <title>Top 3 American states COVID 19 Cases|County-Wise</title>
-	<h1>Contact:</h1
+	 <center>
+	<h1>Contact</h1>
+	</center>
 	  <body style="background-color:powderblue;">
 	</body>
   <meta charset="utf-8">
@@ -40,7 +43,9 @@
    <title>Covid 19 Info</title>
      
       <body style="background-color:powderblue;">
+	  <center>
         <p class="lead">Contact Page, you will get contact details about the Team</p>
+	  </center>
     </body> 
     <style>
   .fakeimg {
@@ -51,7 +56,7 @@
  </head>
  
 <body style="background-color:powderblue;">
-
+<center>
 <address>
 	Address:
     Univeristy Of South Florida<br />
@@ -59,8 +64,9 @@
     <abbr title="Phone">Phone:</abbr>
     813-585-4204
 </address>
+</center>
 <footer >
-      <p align="bottom"> All rights reserved © Team 4</p>
+      <p align="bottom"> All rights reserved © Group 1</p>
 </footer>
 </body>
 </html>
